--- a/src/index.html
+++ b/src/index.html
@@ -7,16 +7,10 @@
   </head>
 
   <body class="index">
-    <div class="images">
-      <div class="image" id="bgPNG"></div>
-      <div class="image" id="bgJPG"></div>
-      <div class="image" id="bgSVG"></div>
-      <img src="images/image.png" />
-      <img src="images/image.jpg" />
-      <img src="images/image.svg" />
-    </div>
-
     <div>This is a landing page</div>
-    <a href="./pages/page.html">Go to an internal page</a>
+    <a href="./pages/guide.html">Гайд</a>
+    <a href="./pages/advanced.html">Для крутых</a>
+    <a href="./pages/about.html">О нас</a>
+    <a href="./pages/help.html">Центры помощи</a>
   </body>
 </html>
